welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: not found: value x
     if (x == 5)
         ^